--- a/index.css
+++ b/index.css
@@ -36,8 +36,9 @@ body{
     height: 100%;
     background: url("images/bg-sidebar-desktop.svg");
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size:cover;
     background-color: white;
+    background-position: center;
     
 }
 
@@ -92,8 +93,6 @@ label{
 }
 .check{
     margin-right: 5px;
-   height: 30px;
-   width: 30px;
     accent-color: #485BBC;
     
 }
