--- a/index.css
+++ b/index.css
@@ -26,9 +26,8 @@ body{
     max-width: 650px;
     width: 100%;
     height: 70%;
-    border: 2px solid;
     border-radius: 13px;
-    overflow: hidden;
+    
 
 }
 .container-side{
@@ -123,4 +122,12 @@ label{
     color: #4259C0;
     font-size: 0.6em;
     font-weight: 500;
+}
+@media screen and (max-width:480px) {
+    .container-side{
+        display: none;
+    }
+    .container-main{
+        width: 100%;
+    }
 }
