--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 40px;
+    padding: 20px 40px;
 }
 .title{
     color: #405bbf;
@@ -100,7 +100,7 @@ label{
     justify-content: space-between;
     align-items: center;
     color: #4259C0;
-    border-bottom: 30px;
+    margin-bottom: 40px;
     font-weight: 700;
     font-size: medium;
 }
